--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <img src="https://raw.githubusercontent.com/14MD/fiche-ema/main/logo-ema-events.png" alt="EMA EVENTS" class="logo">
   <title>Redirection Fiche de mission EMA</title>
   <style>
     body {
