--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Arial', sans-serif;
-      background-color: rgb(17, 17, 17);
+      background-color: #111;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -16,7 +16,7 @@
       min-height: 100vh;
     }
     .logo-top {
-      background: rgb(17, 17, 17);
+      background: #111;
       width: 100%;
       text-align: center;
       padding: 30px 0 10px;
