--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="section"><span class="label">Commentaires :</span> {{ 3. Commentaires }}</div>
 
     <div class="section">
-      <span class="label">📎 Pièce Jointe :</span><br>
+      <span class="label">📎 Dossier Technique :</span><br>
       <a href="{{ 3. Pièce Jointe URL }}" target="_blank">Voir le document</a>
     </div>
   </div>
